# usg-supplicant

./: .gitignore  .gitmessage  CONTRIBUTING.md  Cargo.toml  DESIGN.md  ROADMAP.md  SERVER-CONTRACT.md  WINDOWS_DEV.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/creds/: Cargo.toml
crates/creds/src/: adapter.rs  cng.rs  ecdsa.rs  error.rs  keyinfo.rs  lib.rs  selection.rs
crates/creds/tests/: cng_onhardware.rs  ecdsa_kat.rs  keyinfo.rs  mutual_auth.rs  selection.rs
crates/creds/tests/fixtures/: rsa1024_selfsigned.der  rsa2048_selfsigned.der
crates/eaphost/: Cargo.toml
crates/eaphost-cli/: Cargo.toml
crates/eaphost-cli/src/: main.rs
crates/eaphost/src/: builder.rs  config.rs  config_xml.rs  error.rs  lib.rs  os_fips.rs  peer.rs  profile.rs  register.rs  session.rs  session_registry.rs  status_security.rs
crates/eaphost/tests/: builder.rs  config.rs  config_dll.rs  os_fips.rs  peer_dll.rs  peer_full_session_dll.rs  peer_session.rs  peer_session_dll.rs  real_eaphost.rs  real_eaphost_config.rs  register.rs  session_registry.rs
crates/fips-tls/: Cargo.toml
crates/fips-tls/src/: backend.rs  error.rs  lib.rs  mac.rs  provider.rs  signer.rs
crates/fips-tls/tests/: handshake.rs
crates/fips-tls/tests/fixtures/: gen_rsa_chain.go  rsa_server_key_pkcs8.der
crates/kat/: Cargo.toml
crates/kat/src/: lib.rs
crates/pac/: Cargo.toml
crates/pac/src/: dpapi.rs  error.rs  lib.rs  record.rs  store.rs
crates/pac/tests/: mat.rs
crates/supplicant/: Cargo.toml
crates/supplicant/src/: builder.rs  driver.rs  error.rs  inner_tls.rs  lib.rs
crates/supplicant/tests/: e2e.rs  full_session.rs  inner_tls.rs
crates/supplicant/tests/fixtures/: rsa_ca.der  rsa_server_leaf.der
crates/teap/: Cargo.toml
crates/teap-test-harness/: Cargo.toml
crates/teap-test-harness/src/: lib.rs
crates/teap/src/: cryptobind.rs  eap.rs  error.rs  keyschedule.rs  lib.rs  outer.rs  session.rs
crates/teap/src/tlv/: body.rs  error.rs  mod.rs  raw.rs  types.rs
crates/teap/tests/: keyschedule_kat.rs  outer_framing.rs  session_sm.rs  tlv_codec.rs
crates/usg-kat/: Cargo.toml
crates/usg-kat/src/: lib.rs
crates/usg-status/: Cargo.toml
crates/usg-status-window/: Cargo.toml  build.rs
crates/usg-status-window/src/: cert.rs  main.rs
crates/usg-status-window/ui/: main.slint
crates/usg-status/src/: lib.rs
crates/usg-tray/: Cargo.toml
crates/usg-tray/src/: gfx.rs  main.rs  text.rs  toast.rs  tray.rs  window.rs
