[package]
name = "eaphost"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Windows EAPHost integration for the TEAP supplicant: OS FIPS-policy gate, EAP method registration, and the peer-method DLL shim driven by dot3svc."

# `cdylib` produces eaphost.dll (the EAPHost peer method); `lib` keeps the crate
# usable as a normal dependency and unit-testable.
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# Platform-independent TEAP orchestration the peer-method shim drives.
supplicant = { path = "../supplicant" }
teap = { path = "../teap" }
# Credential providers (CNG machine cert / smartcard user cert; cert selection)
# and the FIPS TLS backend used to assemble a session's driver.
creds = { path = "../creds" }
fips-tls = { path = "../fips-tls" }
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }
# Scrub the exported MSK held in AuthResult on drop.
zeroize = { version = "1.9", default-features = false, features = ["alloc"] }

[dev-dependencies]
# The shared TEAP server harness, to drive a full handshake through the DLL.
teap-test-harness = { path = "../teap-test-harness" }

[target.'cfg(windows)'.dependencies]
# Publish auth status (state, identity, cert subject) for the status tray.
usg-status = { path = "../usg-status" }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    # EAPHost peer-method ABI: EAP_PEER_METHOD_ROUTINES, EapPacket,
    # EapPeerMethodOutput/Result, EAP_ERROR, EAP_ATTRIBUTES.
    "Win32_Security_ExtensibleAuthenticationProtocol",
    "Win32_Security_Cryptography",
    # LoadLibrary/GetProcAddress for the self-hosted DLL-loading test.
    "Win32_System_LibraryLoader",
    # LocalAlloc for EapPeerGetIdentity's identity string (EAPHost LocalFrees it).
    "Win32_System_Memory",
    # IXMLDOMDocument2 + CoCreateInstance for the EapPeerConfigXml2Blob/Blob2Xml
    # config-DLL entry points (the EAPHost connection-profile round-trip).
    "Win32_Data_Xml_MsXml",
    "Win32_System_Com",
] }

# Mirrors the security baseline; `unsafe` is permitted (Win32 FFI) but confined
# to `#[cfg(windows)]` and forbidden elsewhere (see lib.rs).
[lints.rust]
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
arithmetic_side_effects = "deny"
