[package]
name = "pac"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Machine Authorization Ticket (MAT) persistence: machine-scope DPAPI storage of the opaque server ticket for EAP-chaining across boot and logon."

[dependencies]
zeroize = { version = "1.9", default-features = false, features = ["alloc"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }

# Mirrors the security baseline; `unsafe` is permitted (DPAPI FFI) but confined
# to `#[cfg(windows)]` and forbidden elsewhere (see lib.rs).
[lints.rust]
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
arithmetic_side_effects = "deny"
