[package]
name = "supplicant"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "TEAP supplicant orchestration: drives the EAP/TEAP outer framing, the FIPS TLS 1.3 handshake, and the Phase-2 session into one authentication."

[dependencies]
teap = { path = "../teap" }
fips-tls = { path = "../fips-tls" }
pac = { path = "../pac" }
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }

[dev-dependencies]
rcgen = "0.13"
creds = { path = "../creds" }
aws-lc-rs = "1"
teap-test-harness = { path = "../teap-test-harness" }

[lints]
workspace = true
