[package]
name = "teap-test-harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Test-only TEAP server harness (rustls outer + inner EAP-TLS + crypto-binding) shared by usg-supplicant integration tests. Not for production."
publish = false

[dependencies]
fips-tls = { path = "../fips-tls" }
teap = { path = "../teap" }
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }
rcgen = "0.13"

# Test-support code: the strict production lint baseline does not apply.
[lints.clippy]
all = { level = "warn", priority = -1 }
