[package]
name = "teap"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "EAP-TEAP (RFC 7170) protocol core: TLV codec, per-session state machine, crypto-binding, key schedule. Pure, no I/O, no unsafe."

[dependencies]
# Key-material scrubbing. `alloc` enables Zeroizing<Vec<u8>>.
zeroize = { version = "1.9.0", default-features = false, features = ["alloc", "zeroize_derive"] }

[dev-dependencies]
usg-kat = { path = "../usg-kat" }
# TEST-ONLY independent reference for HMAC-SHA-256/384, used to compute and
# verify the usg-TEAP/1.3 key-schedule KAT vectors. NOT a production/FIPS-path
# dependency — the shipped binary's MAC comes from the FIPS-validated module.
hmac = "0.12"
sha2 = "0.11"

[lints]
workspace = true
